fix(invert-mode) fixes z-index for inverted picture as thumbs are opened

--- a/src/main.scss
+++ b/src/main.scss
@@ -67,6 +67,7 @@ body {
     content: "";
     display: block;
     position: fixed;
+    z-index: -1;
     top: 0;
     left: 0;
     width: 100%;
